# studychat

./: .gitignore  CMakeLists.txt  README.md  clientsocket.cpp  main.cpp  server.cpp  studychat.cpp  studychat.ui
Headers/: clientsocket.h  server.h  studychat.h
